--- a/src/NuGetGallery.Operations/NuGetGallery.Operations.csproj
+++ b/src/NuGetGallery.Operations/NuGetGallery.Operations.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Infrastructure\ICommandManager.cs" />
     <Compile Include="Infrastructure\Verbosity.cs" />
     <Compile Include="Tasks\DeleteUserTask.cs" />
+    <Compile Include="Tasks\ExportCurrentRankingsTask.cs" />
     <Compile Include="Tasks\ExportDatabaseTask.cs" />
     <Compile Include="Tasks\HandleQueuedPackageEditsTask.cs" />
     <Compile Include="Tasks\ListDeploymentSettingsTask.cs" />
@@ -369,6 +370,12 @@
       <Project>{1dacf781-5cd0-4123-8bac-cd385d864be5}</Project>
       <Name>NuGetGallery</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\Ranking_Project.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\Ranking_Overall.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
