--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -51,7 +51,7 @@
         -->
         <add key="Gallery.LuceneIndexLocation" value="AppData" />
         
-        <add key="Gallery.Environment" value="Development" />
+        <add key="Gallery.Environment" value="Production" />
         <add key="Gallery.SiteRoot" value="http://nuget.org/" />
         <add key="Gallery.GalleryOwner" value="NuGet Gallery &lt;nugetgallery@outercurve.org&gt;" />
         <add key="Gallery.ConfirmEmailAddresses" value="true" />
