Remove email confirmation

--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -54,14 +54,14 @@
         <add key="Gallery.Environment" value="Production" />
         <add key="Gallery.SiteRoot" value="http://nuget.org/" />
         <add key="Gallery.GalleryOwner" value="NuGet Gallery &lt;nugetgallery@outercurve.org&gt;" />
-        <add key="Gallery.ConfirmEmailAddresses" value="true" />
+        <add key="Gallery.ConfirmEmailAddresses" value="false" />
         <add key="Gallery.HasWorker" value="false" />
 
         <!-- Feature Configuration -->
         <add key="Feature.FriendlyLicenses" value="false" />
     </appSettings>
     <connectionStrings>
-        <add name="Gallery.SqlServer" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=NuGetGallery;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+        <add name="Gallery.SqlServer" connectionString="Data Source=tcp:tvj79yj8f3.database.windows.net,1433;Initial Catalog=SiteExtAiXIv6VzG;User Id=kudu2@tvj79yj8f3;Password=iis6!dfu;" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <elmah>
         <security allowRemoteAccess="true" />
