--- a/src/NuGetGallery/NuGetGallery.csproj
+++ b/src/NuGetGallery/NuGetGallery.csproj
@@ -1144,6 +1144,27 @@
     <Content Include="Content\Logos\outercurve.png" />
     <Content Include="Content\Images\icons\nuget_32_mono_b.png" />
     <Content Include="Content\Images\icons\nuget_32_mono_w.png" />
+    <Content Include="Content\Images\editProfile.png" />
+    <Content Include="Content\Images\managePackages.png" />
+    <Content Include="Content\Images\outercurve.png" />
+    <Content Include="Content\Images\treeview\ajax-loader.gif" />
+    <Content Include="Content\Images\treeview\file.gif" />
+    <Content Include="Content\Images\treeview\folder-closed.gif" />
+    <Content Include="Content\Images\treeview\folder.gif" />
+    <Content Include="Content\Images\treeview\minus.gif" />
+    <Content Include="Content\Images\treeview\plus.gif" />
+    <Content Include="Content\Images\treeview\treeview-black-line.gif" />
+    <Content Include="Content\Images\treeview\treeview-black.gif" />
+    <Content Include="Content\Images\treeview\treeview-default-line.gif" />
+    <Content Include="Content\Images\treeview\treeview-default.gif" />
+    <Content Include="Content\Images\treeview\treeview-famfamfam-line.gif" />
+    <Content Include="Content\Images\treeview\treeview-famfamfam.gif" />
+    <Content Include="Content\Images\treeview\treeview-gray-line.gif" />
+    <Content Include="Content\Images\treeview\treeview-gray.gif" />
+    <Content Include="Content\Images\treeview\treeview-red-line.gif" />
+    <Content Include="Content\Images\treeview\treeview-red.gif" />
+    <Content Include="Content\Images\uploadPackage.png" />
+    <Content Include="Content\Images\Websites.png" />
     <Content Include="Content\Images\YourPackage.png" />
     <Content Include="Content\Layout.css" />
     <Content Include="Content\PageStylings.css" />
