--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -54,7 +54,7 @@
         <add key="Gallery.Environment" value="Production" />
         <add key="Gallery.SiteRoot" value="http://nuget.org/" />
         <add key="Gallery.GalleryOwner" value="NuGet Gallery &lt;nugetgallery@outercurve.org&gt;" />
-        <add key="Gallery.ConfirmEmailAddresses" value="true" />
+        <add key="Gallery.ConfirmEmailAddresses" value="false" />
         <add key="Gallery.HasWorker" value="false" />
 
         <!-- Feature Configuration -->
