--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -72,7 +72,7 @@
 
         <add key="Gallery.Brand" value="NuGet Gallery" />
         <add key="Gallery.GalleryOwner" value="NuGet Gallery &lt;nugetgallery@outercurve.org&gt;" />
-        <add key="Gallery.ConfirmEmailAddresses" value="true" />
+        <add key="Gallery.ConfirmEmailAddresses" value="false" />
 
         <!-- Set this to true if there is a backend worker based on NuGetGallery.Backend. This disables background tasks in the Website -->
         <add key="Gallery.HasWorker" value="false" />
